Tweaked font-size for game-over message

--- a/styles.css
+++ b/styles.css
@@ -223,6 +223,10 @@ a {
         font-size: 12px;
     }
 
+    .game-over {
+        font-size: 16px;
+    }
+
     .game-container {
         grid-column: 1 / 5;
     }
